src/test/deca/context/invalid/SansObjet/DeclVar-Greater-boolean-boolean-float.deca
// Description:
//    Declaration of a boolean variable using > operation between a boolean variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    float y = 2.5; 
    boolean z = x > y ; 
}
